Updated webpack and notice block
Updated webpack build to optimize the blocks, and reduce the block size from 2.82 MB to around 1MB, which addresses https://github.com/Codeinwp/gutenberg-blocks/issues/3

Also fixed Notice Block by making the target more specific, which addresses: https://github.com/Codeinwp/gutenberg-blocks/issues/5

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "ThemeIsle Gutenberg Blocks",
 	"scripts": {
 		"build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
-		"dev": "cross-env BABEL_ENV=default webpack --watch",
+		"dev": "cross-env BABEL_ENV=default NODE_ENV=development webpack --watch",
 		"lint": "eslint blocks/*/*.js store/*.js"
 	},
 	"engines": {
@@ -12,30 +12,31 @@
 		"npm": ">=6.0.0"
 	},
 	"dependencies": {
+		"classnames": "^2.2.6",
 		"@handsontable/react": "^1.1.0",
 		"handsontable": "^5.0.1",
 		"react": "16.4.1",
 		"react-google-charts": "^3.0.5"
 	},
 	"devDependencies": {
-		"@wordpress/babel-preset-default": "^1.3.0",
-		"autoprefixer": "^9.2.0",
-		"babel-core": "6.26.0",
-		"babel-loader": "7.1.4",
-		"babel-plugin-transform-async-generator-functions": "^6.24.1",
-		"babel-plugin-transform-react-jsx": "^6.24.1",
-		"classnames": "^2.2.6",
+		"@babel/core": "^7.1.6",
+		"@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+		"@babel/plugin-transform-async-to-generator": "^7.1.0",
+		"@babel/plugin-transform-react-jsx": "^7.1.6",
+		"@babel/preset-env": "^7.1.6",
+		"autoprefixer": "^9.3.1",
+		"babel-loader": "^8.0.4",
 		"cross-env": "3.2.4",
+		"css-loader": "^1.0.1",
 		"eslint": "^5.7.0",
 		"eslint-config-wordpress": "^2.0.0",
 		"eslint-loader": "^2.1.1",
 		"eslint-plugin-react": "^7.11.1",
-		"extract-text-webpack-plugin": "4.0.0-beta.0",
-		"node-sass": "git://github.com/sass/node-sass.git#v4.7.0",
-		"postcss-loader": "2.1.3",
-		"raw-loader": "^0.5.1",
-		"sass-loader": "6.0.7",
-		"webpack": "4.8.3",
-		"webpack-cli": "2.1.3"
+		"mini-css-extract-plugin": "^0.4.4",
+		"node-sass": "^4.10.0",
+		"postcss-loader": "^3.0.0",
+		"sass-loader": "^7.1.0",
+		"webpack": "^4.25.1",
+		"webpack-cli": "^3.1.2"
 	}
 }
