--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
 		"npm": ">=6.0.0"
 	},
 	"dependencies": {
-		"classnames": "^2.2.6",
 		"@handsontable/react": "^1.1.0",
+		"classnames": "^2.2.6",
 		"handsontable": "^5.0.1",
 		"react": "16.4.1",
+		"react-autosuggest": "^9.4.2",
 		"react-google-charts": "^3.0.5"
 	},
 	"devDependencies": {
