--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
 		"dev": "cross-env BABEL_ENV=default NODE_ENV=development webpack --watch",
-		"lint": "eslint blocks/*/*.js store/*.js"
+		"lint": "eslint blocks/*/*.js"
 	},
 	"engines": {
 		"node": ">=8.0.0",
@@ -16,8 +16,6 @@
 		"classnames": "^2.2.6",
 		"handsontable": "^5.0.1",
 		"hex-rgba": "^1.0.2",
-		"react": "16.4.1",
-		"react-autosuggest": "^9.4.2",
 		"react-google-charts": "^3.0.5",
 		"react-google-font-loader": "^1.0.5",
 		"react-lazy-load": "^3.0.13"
