Fix issue with Font Awesome Block
Fixed issue with FA Block crashing when being updated from 1.1.4 to 1.1.5 https://github.com/Codeinwp/otter-blocks/issues/53

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
 		"dev": "cross-env BABEL_ENV=default NODE_ENV=development webpack --watch",
-		"lint": "eslint blocks/*/*.js"
+		"lint": "eslint src/*/*/*.js"
 	},
 	"engines": {
 		"node": ">=8.0.0",
