--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"array-move": "^2.0.0",
 		"classnames": "^2.2.6",
+		"dom-scroll-into-view": "^1.2.1",
 		"hex-rgba": "^1.0.2",
 		"react-google-charts": "^3.0.5",
 		"react-google-font-loader": "^1.0.5",
