Lazy load Font Awesome Picker
This PR uses React.Lazy to load Font Awesome Picker, which makes the
initial load bundle 2.5mb lighter than before. Closes https://github.com/Codeinwp/gutenberg-blocks/issues/112

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,9 @@
         "es6": true
     },
     "extends": "wordpress",
+    "parser": "babel-eslint",
     "parserOptions": {
+        "allowImportExportEverywhere": true,
         "ecmaFeatures": {
             "jsx": true
         },
