--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
 	"devDependencies": {
 		"@babel/core": "^7.1.6",
 		"@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
 		"@babel/plugin-transform-async-to-generator": "^7.1.0",
 		"@babel/plugin-transform-react-jsx": "^7.1.6",
 		"@babel/preset-env": "^7.1.6",
 		"autoprefixer": "^9.3.1",
+		"babel-eslint": "^10.0.2",
 		"babel-loader": "^8.0.4",
 		"cross-env": "3.2.4",
 		"css-loader": "^1.0.1",
