--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"autoprefixer": "^9.6.1",
 		"babel-eslint": "^10.0.2",
 		"babel-loader": "^8.0.6",
+		"clean-webpack-plugin": "^3.0.0",
 		"cross-env": "5.2.0",
 		"css-loader": "^3.2.0",
 		"eslint": "^6.1.0",
