[WIP] Save CSS to meta
ToDo:

- Save CSS to files
- Handle Dynamic Block

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
 	},
 	"support": {
 		"issues": "https://github.com/Codeinwp/gutenberg-blocks/issues"
+	},
+	"require": {
+		"tubalmartin/cssmin": "^4.1"
 	}
 }
