--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
 		"uuid": "^3.3.2"
 	},
 	"devDependencies": {
+		"@semantic-release/changelog": "^3.0.6",
+		"@semantic-release/exec": "^3.3.8",
+		"@semantic-release/git": "^7.0.18",
+		"conventional-changelog-simple-preset": "^1.0.13",
+		"grunt": "^1.0.4",
+		"grunt-version": "^1.3.2",
+		"semantic-release": "^15.14.0",
 		"@babel/core": "^7.5.5",
 		"@babel/plugin-proposal-object-rest-spread": "^7.5.5",
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
