build: fix sniffer

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "installer-disable": "true"
   },
   "scripts": {
-    "lint": "phpcs -i",
+    "lint": "phpcs",
     "format": "phpcbf"
   }
 }
