--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
 		"dev": "cross-env BABEL_ENV=default NODE_ENV=development webpack --watch",
-		"lint": "eslint src/*/*/*.js"
+		"lint": "eslint src/*/*/*.js",
+		"release": "semantic-release"
 	},
 	"engines": {
 		"node": ">=8.0.0",
