--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     }
   ],
   "autoload": {
-    "files": [
-      "load.php"
-    ]
+    "psr-4": {
+      "ThemeIsle\\GutenbergBlocks\\": "inc/"
+    }
   },
   "support": {
     "issues": "https://github.com/Codeinwp/gutenberg-blocks/issues"
@@ -27,7 +27,7 @@
     "squizlabs/php_codesniffer": "^3.3",
     "wp-coding-standards/wpcs": "^1",
     "phpcompatibility/php-compatibility": "^9",
-    "dealerdirect/phpcodesniffer-composer-installer": "0.4.4",
+    "dealerdirect/phpcodesniffer-composer-installer": "0.6.0",
     "automattic/vipwpcs": "^0.3.0"
   },
   "minimum-stability": "dev",
