fix: adds constants and fix class name

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -15,7 +15,7 @@ plugins:
         - CHANGELOG.md
         - composer.json
         - composer.lock
-        - load.php
+        - inc/class-main.php
         - package-lock.json
         - package.json
   - - "@semantic-release/github"
