Global Defaults & remove unused vars
Added Global Defaults & removed unused variables

--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,15 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "no-unused-vars": [
+            "error", {
+                "vars": "all",
+                "args": "after-used",
+                "ignoreRestSiblings": false
+            }
+        ],
+        "react/jsx-uses-react": "error",
+        "react/jsx-uses-vars": "error"
     }
 }
