--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "issues": "https://github.com/Codeinwp/gutenberg-blocks/issues"
   },
   "require": {
-    "tubalmartin/cssmin": "^4.1"
+    "tubalmartin/cssmin": "^4.1",
+    "masterminds/html5": "^2.7"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.3",
