--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"npm": ">=6.0.0"
 	},
 	"dependencies": {
+		"@wordpress/icons": "^2.3.0",
 		"array-move": "^2.2.2",
 		"classnames": "^2.2.6",
 		"dom-scroll-into-view": "^2.0.1",
