--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"classnames": "^2.2.6",
 		"dom-scroll-into-view": "^2.0.1",
 		"hex-rgba": "^1.0.2",
+		"progressbar.js": "^1.1.0",
 		"react-google-font-loader": "1.0.5",
 		"react-lazy-load": "^3.1.13",
 		"react-sortable-hoc": "^1.11.0",
