--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
 		"react-google-font-loader": "1.0.5",
 		"react-lazy-load": "^3.1.13",
 		"react-sortable-hoc": "^1.11.0",
-		"uuid": "^8.3.0",
-		"@lottiefiles/react-lottie-player": "^2.1.5"
+		"uuid": "^8.3.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.11.1",
