--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"npm": ">=6.0.0"
 	},
 	"dependencies": {
-		"@emotion/core": "^11.0.0",
+		"@emotion/react": "^11.1.1",
 		"@wordpress/icons": "^2.8.0",
 		"array-move": "^3.0.1",
 		"classnames": "^2.2.6",
