--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
 		"dev": "cross-env BABEL_ENV=default NODE_ENV=development webpack --watch",
 		"lint": "eslint src/*/*/*.js",
+		"fix": "eslint src/*/*/*.js --fix",
 		"release": "semantic-release"
 	},
 	"engines": {
