--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"classnames": "^2.2.6",
 		"dom-scroll-into-view": "^2.0.1",
 		"hex-rgba": "^1.0.2",
+		"react": "^16.14.0",
 		"react-google-font-loader": "1.0.5",
 		"react-lazy-load": "^3.1.13",
 		"react-sortable-hoc": "^1.11.0",
@@ -35,6 +36,12 @@
 		"@semantic-release/changelog": "^5.0.1",
 		"@semantic-release/exec": "^5.0.0",
 		"@semantic-release/git": "^9.0.0",
+		"@types/wordpress__block-editor": "^2.2.9",
+		"@types/wordpress__blocks": "^6.4.12",
+		"@wordpress/block-editor": "^5.2.6",
+		"@wordpress/blocks": "^7.0.3",
+		"@wordpress/element": "^2.19.1",
+		"@wordpress/i18n": "^3.18.0",
 		"autoprefixer": "^10.2.1",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.2",
@@ -53,6 +60,8 @@
 		"postcss-loader": "^4.1.0",
 		"sass-loader": "^10.1.0",
 		"semantic-release": "^17.3.1",
+		"ts-loader": "^8.0.17",
+		"typescript": "^4.1.5",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12"
 	}
