--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
 		"dev": "cross-env BABEL_ENV=default NODE_ENV=development webpack --watch",
 		"lint": "eslint src/*/*/*.js",
-		"lint:typescript": "eslint -c tsconfig.eslintrc.js  src/*/*/*.tsx",
+		"fix": "eslint src/*/*/*.js --fix",
 		"release": "semantic-release"
 	},
 	"engines": {
@@ -28,6 +28,8 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.10",
+		"@babel/eslint-parser": "^7.12.13",
+		"@babel/eslint-plugin": "^7.12.13",
 		"@babel/plugin-proposal-object-rest-spread": "^7.12.1",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
 		"@babel/plugin-transform-async-to-generator": "^7.12.1",
@@ -46,7 +48,6 @@
 		"@wordpress/element": "^2.19.1",
 		"@wordpress/i18n": "^3.18.0",
 		"autoprefixer": "^10.2.1",
-		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.2",
 		"clean-webpack-plugin": "^3.0.0",
 		"conventional-changelog-simple-preset": "^1.0.14",
