--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"autoprefixer": "^10.2.0",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.2",
+		"chokidar": "^3.5.1",
 		"clean-webpack-plugin": "^3.0.0",
 		"conventional-changelog-simple-preset": "^1.0.14",
 		"cross-env": "7.0.3",
