--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,29 @@
         "react",
         "@babel"
     ],
+    "overrides": [
+        {
+            "files": [ "**/*.ts", "**/*.tsx" ],
+            "parser":"@typescript-eslint/parser", // Specifies the ESLint parser
+            "parserOptions": {
+                "ecmaVersion": 2020, // Allows for the parsing of modern ECMAScript features
+                "sourceType": "module", // Allows for the use of imports
+                "ecmaFeatures": {
+                    "jsx": true // Allows for the parsing of JSX
+                }
+            },
+            "extends": [
+                "plugin:react/recommended",
+                "plugin:@typescript-eslint/recommended", // Uses the recommended rules from the @typescript-eslint/eslint-plugin
+                "wordpress"
+            ],
+            "settings": {
+                "react": {
+                    "version": "detect"
+                }
+            },
+        }
+    ],
     "rules": {
         "object-curly-spacing": ["warn", "always"],
         "array-bracket-spacing": ["error", "always", { "arraysInArrays": false, "objectsInArrays": false }],
