--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
 	"scripts": {
 		"build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
 		"dev": "cross-env BABEL_ENV=default NODE_ENV=development webpack --watch",
-		"lint-all": "npm run lint && npm run tsc:lint",
-		"fix-all": "npm run fix && npm run tsc:fix",
-		"lint": "eslint src/*/*/*.js",
-		"fix": "eslint src/*/*/*.js --fix",
-		"tsc:lint": "eslint -c tsconfig.linter.js src/*/*/*.{ts,tsx}",
-		"tsc:fix": "eslint -c tsconfig.linter.js src/*/*/*.{ts.tsx} --fix",
+		"lint": "eslint src/*/*/*.{js,ts,tsx}",
+		"fix": "eslint src/*/*/*.{js,ts,tsx} --fix",
+		"js:lint": "eslint src/*/*/*.js",
+		"js:fix": "eslint src/*/*/*.js --fix",
+		"tsc:lint": "eslint src/*/*/*.{ts,tsx}",
+		"tsc:fix": "eslint src/*/*/*.{ts.tsx} --fix",
 		"release": "semantic-release"
 	},
 	"engines": {
