--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
 	},
 	"dependencies": {
 		"@emotion/react": "^11.1.4",
+		"@wordpress/api-fetch": "^3.21.5",
 		"@wordpress/components": "^12.0.6",
 		"@wordpress/icons": "^2.9.0",
+		"@wordpress/keycodes": "^2.18.3",
 		"array-move": "^3.0.1",
 		"classnames": "^2.2.6",
 		"dom-scroll-into-view": "^2.0.1",
@@ -44,6 +46,8 @@
 		"@semantic-release/changelog": "^5.0.1",
 		"@semantic-release/exec": "^5.0.0",
 		"@semantic-release/git": "^9.0.0",
+		"@types/classnames": "^2.2.11",
+		"@types/wordpress__api-fetch": "^3.2.3",
 		"@types/wordpress__block-editor": "^2.2.9",
 		"@types/wordpress__blocks": "^6.4.12",
 		"@typescript-eslint/eslint-plugin": "^4.15.0",
@@ -53,6 +57,7 @@
 		"@wordpress/dependency-extraction-webpack-plugin": "^3.0.1",
 		"@wordpress/element": "^2.19.1",
 		"@wordpress/i18n": "^3.18.0",
+		"@wordpress/server-side-render": "^1.20.7",
 		"autoprefixer": "^10.2.1",
 		"babel-loader": "^8.2.2",
 		"clean-webpack-plugin": "^3.0.0",
