--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"classnames": "^2.2.6",
 		"dom-scroll-into-view": "^2.0.1",
 		"hex-rgba": "^1.0.2",
+		"lodash": "^4.17.21",
 		"react": "^16.14.0",
 		"react-google-font-loader": "1.0.5",
 		"react-lazy-load": "^3.1.13",
@@ -47,6 +48,7 @@
 		"@semantic-release/exec": "^5.0.0",
 		"@semantic-release/git": "^9.0.0",
 		"@types/classnames": "^2.2.11",
+		"@types/lodash": "^4.14.168",
 		"@types/wordpress__api-fetch": "^3.2.3",
 		"@types/wordpress__block-editor": "^2.2.9",
 		"@types/wordpress__blocks": "^6.4.12",
