--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       /* List of folders to include type definitions from */
       "typeRoots": [
         "node_modules/@types",
-        "src"
+        "src/types"
       ],
       /* allow import React instead of import * as React */
       "allowSyntheticDefaultImports": true,
