--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
 		"dev": "cross-env BABEL_ENV=default NODE_ENV=development webpack --watch",
 		"lint": "eslint src/*/*/*.js",
+		"fix": "eslint src/*/*/*.js --fix",
 		"release": "semantic-release"
 	},
 	"engines": {
@@ -13,8 +14,8 @@
 		"npm": ">=6.0.0"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.1.4",
-		"@wordpress/icons": "^2.9.0",
+		"@emotion/react": "^11.1.5",
+		"@wordpress/icons": "^2.9.1",
 		"array-move": "^3.0.1",
 		"classnames": "^2.2.6",
 		"dom-scroll-into-view": "^2.0.1",
@@ -25,35 +26,36 @@
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.10",
-		"@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+		"@babel/core": "^7.13.8",
+		"@babel/plugin-proposal-object-rest-spread": "^7.13.8",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
-		"@babel/plugin-transform-async-to-generator": "^7.12.1",
-		"@babel/plugin-transform-react-jsx": "^7.12.12",
-		"@babel/preset-env": "^7.12.11",
-		"@emotion/babel-preset-css-prop": "^11.0.0",
+		"@babel/plugin-transform-async-to-generator": "^7.13.0",
+		"@babel/plugin-transform-react-jsx": "^7.12.17",
+		"@babel/preset-env": "^7.13.8",
+		"@emotion/babel-preset-css-prop": "^11.2.0",
 		"@semantic-release/changelog": "^5.0.1",
 		"@semantic-release/exec": "^5.0.0",
 		"@semantic-release/git": "^9.0.0",
-		"autoprefixer": "^10.2.0",
+		"autoprefixer": "^10.2.4",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.2",
+		"chokidar": "^3.5.1",
 		"clean-webpack-plugin": "^3.0.0",
-		"conventional-changelog-simple-preset": "^1.0.14",
+		"conventional-changelog-simple-preset": "^1.0.15",
 		"cross-env": "7.0.3",
-		"css-loader": "^5.0.1",
-		"eslint": "^7.17.0",
+		"css-loader": "^5.1.1",
+		"eslint": "^7.21.0",
 		"eslint-config-wordpress": "^2.0.0",
 		"eslint-loader": "^4.0.2",
 		"eslint-plugin-react": "^7.22.0",
 		"grunt": "^1.3.0",
 		"grunt-version": "^2.0.0",
-		"mini-css-extract-plugin": "^1.3.3",
+		"mini-css-extract-plugin": "^1.3.9",
 		"node-sass": "^5.0.0",
-		"postcss-loader": "^4.1.0",
-		"sass-loader": "^10.1.0",
-		"semantic-release": "^17.3.1",
-		"webpack": "^4.44.1",
+		"postcss-loader": "^4.2.0",
+		"sass-loader": "^10.1.1",
+		"semantic-release": "^17.4.0",
+		"webpack": "^4.46.0",
 		"webpack-cli": "^3.3.12"
 	}
 }
