--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"js:fix": "eslint src/*/*/*.js --fix",
 		"tsc:lint": "eslint src/*/*/*.{ts,tsx}",
 		"tsc:fix": "eslint src/*/*/*.{ts.tsx} --fix",
+		"prepare": "husky install",
 		"release": "semantic-release"
 	},
 	"engines": {
@@ -73,6 +74,7 @@
 		"eslint-plugin-react": "^7.22.0",
 		"grunt": "^1.3.0",
 		"grunt-version": "^2.0.0",
+		"husky": "^5.1.3",
 		"mini-css-extract-plugin": "^1.3.9",
 		"node-sass": "^5.0.0",
 		"postcss-loader": "^4.2.0",
