--- a/package.json
+++ b/package.json
@@ -74,15 +74,25 @@
 		"eslint-plugin-react": "^7.22.0",
 		"grunt": "^1.3.0",
 		"grunt-version": "^2.0.0",
-		"husky": "^5.1.3",
+		"husky": "^4.3.8",
+		"lint-staged": "^10.5.4",
 		"mini-css-extract-plugin": "^1.3.9",
 		"node-sass": "^5.0.0",
 		"postcss-loader": "^4.2.0",
+		"prettier": "2.2.1",
 		"sass-loader": "^10.1.1",
 		"semantic-release": "^17.4.0",
 		"ts-loader": "^8.0.17",
 		"typescript": "^4.2.3",
 		"webpack": "^4.46.0",
 		"webpack-cli": "^3.3.12"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.{js,ts,tsx}": ["eslint --cache --fix", "prettier --write"]
 	}
 }
