--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"scripts": {
 		"build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
 		"dev": "cross-env BABEL_ENV=default NODE_ENV=development webpack --watch",
-		"lint": "eslint src/*/*/*.{js,ts,tsx}",
-		"fix": "eslint src/*/*/*.{js,ts,tsx} --fix",
+		"lint": "eslint src/**/*.{js,ts,tsx}",
+		"fix": "eslint src/**/*.{js,ts,tsx} --fix",
 		"js:lint": "eslint src/*/*/*.js",
 		"js:fix": "eslint src/*/*/*.js --fix",
 		"tsc:lint": "eslint src/*/*/*.{ts,tsx}",
