--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -18,5 +18,6 @@ plugins:
         - inc/class-main.php
         - package-lock.json
         - package.json
+      message: "chore(release): ${nextRelease.version} \n\n${nextRelease.notes}"
   - - "@semantic-release/github"
 
