--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mysql:
     image: mysql:5.7
     volumes:
-      - ./db:/var/lib/mysql
+      - ../wordpress-db-gutenberg:/var/lib/mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: wordpress
@@ -22,7 +22,7 @@ services:
     networks:
       - default
     volumes:
-       - ./wpcore:/var/www/html/
+       - ../wpcore-gutenberg:/var/www/html/
        - .:/var/www/html/wp-content/plugins/otter-blocks/vendor/codeinwp/gutenberg-blocks
     restart: always
     environment:
