--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,6 @@
       "resolveJsonModule": true,
       "skipLibCheck": true,
     },
+    "include": ["src/**/*"],
 	"exclude": ["node_modules"]
   }
