--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   },
   "require": {
     "tubalmartin/cssmin": "^4.1",
-    "masterminds/html5": "^2.7"
+    "masterminds/html5": "^2.7",
+    "symfony/intl": "^3.4"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.3",
