Fix Review Block conflict with WooCommerce
Review Block was causing a fatal error when used on sites with
non-English WooCommerce instance. Fixes https://github.com/Codeinwp/gutenberg-blocks/issues/679

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
   },
   "require": {
     "tubalmartin/cssmin": "^4.1",
-    "masterminds/html5": "^2.7",
-    "symfony/intl": "^3.4"
+    "masterminds/html5": "^2.7"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.3",
