--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "themeisle-gutenberg-blocks",
-	"version": "1.6.3",
+	"version": "1.6.7",
 	"description": "ThemeIsle Gutenberg Blocks",
 	"scripts": {
 		"build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
@@ -14,10 +14,11 @@
 		"npm": ">=6.0.0"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.1.5",
-		"@wordpress/icons": "^2.10.1",
+		"@emotion/react": "^11.4.0",
+		"@wordpress/icons": "^4.0.0",
 		"array-move": "^3.0.1",
 		"classnames": "^2.3.1",
+		"currency-symbol-map": "^5.0.1",
 		"dom-scroll-into-view": "^2.0.1",
 		"hex-rgba": "^1.0.2",
 		"react-google-font-loader": "1.0.5",
@@ -26,35 +27,35 @@
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.13.15",
-		"@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+		"@babel/core": "^7.14.3",
+		"@babel/plugin-proposal-object-rest-spread": "^7.14.4",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
 		"@babel/plugin-transform-async-to-generator": "^7.13.0",
-		"@babel/plugin-transform-react-jsx": "^7.13.12",
-		"@babel/preset-env": "^7.13.15",
+		"@babel/plugin-transform-react-jsx": "^7.14.3",
+		"@babel/preset-env": "^7.14.4",
 		"@emotion/babel-preset-css-prop": "^11.2.0",
 		"@semantic-release/changelog": "^5.0.1",
 		"@semantic-release/exec": "^5.0.0",
 		"@semantic-release/git": "^9.0.0",
-		"autoprefixer": "^10.2.5",
+		"autoprefixer": "^10.2.6",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.2",
 		"chokidar": "^3.5.1",
 		"clean-webpack-plugin": "^3.0.0",
-		"conventional-changelog-simple-preset": "^1.0.15",
+		"conventional-changelog-simple-preset": "^1.0.16",
 		"cross-env": "7.0.3",
-		"css-loader": "^5.2.1",
-		"eslint": "^7.24.0",
+		"css-loader": "^5.2.6",
+		"eslint": "^7.27.0",
 		"eslint-config-wordpress": "^2.0.0",
 		"eslint-loader": "^4.0.2",
-		"eslint-plugin-react": "^7.23.2",
-		"grunt": "^1.3.0",
+		"eslint-plugin-react": "^7.24.0",
+		"grunt": "^1.4.1",
 		"grunt-version": "^2.0.0",
-		"mini-css-extract-plugin": "^1.4.1",
+		"mini-css-extract-plugin": "^1.6.0",
 		"node-sass": "^5.0.0",
-		"postcss-loader": "^4.2.0",
-		"sass-loader": "^10.1.1",
-		"semantic-release": "^17.4.2",
+		"postcss-loader": "^4.3.0",
+		"sass-loader": "^10.2.0",
+		"semantic-release": "^17.4.3",
 		"webpack": "^4.46.0",
 		"webpack-cli": "^3.3.12"
 	}
