--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.6.7",
 	"description": "ThemeIsle Gutenberg Blocks",
 	"scripts": {
+		"build:makepot": "docker run --user root --rm --volume  \"$(pwd):/var/www/html/gutenberg-blocks\" wordpress:cli bash -c 'php -d memory_limit=1024M \"$(which wp)\" i18n make-pot --domain=otter-blocks ./gutenberg-blocks/ ./gutenberg-blocks/languages/otter-blocks.pot  --allow-root --exclude=dist,build,bundle '",
 		"build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
 		"dev": "cross-env BABEL_ENV=default NODE_ENV=development webpack --watch",
 		"lint": "eslint src/*/*/*.js",
