--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@wordpress/icons": "^4.0.0",
 		"array-move": "^3.0.1",
 		"classnames": "^2.3.1",
+		"core-js": "^3.14.0",
 		"currency-symbol-map": "^5.0.1",
 		"dom-scroll-into-view": "^2.0.1",
 		"hex-rgba": "^1.0.2",
@@ -32,11 +33,12 @@
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
 		"@babel/plugin-transform-async-to-generator": "^7.13.0",
 		"@babel/plugin-transform-react-jsx": "^7.14.3",
-		"@babel/preset-env": "^7.14.4",
+		"@babel/preset-env": "^7.14.5",
 		"@emotion/babel-preset-css-prop": "^11.2.0",
 		"@semantic-release/changelog": "^5.0.1",
 		"@semantic-release/exec": "^5.0.0",
 		"@semantic-release/git": "^9.0.0",
+		"@wordpress/babel-preset-default": "^6.2.0",
 		"autoprefixer": "^10.2.6",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.2",
@@ -54,6 +56,7 @@
 		"mini-css-extract-plugin": "^1.6.0",
 		"node-sass": "^5.0.0",
 		"postcss-loader": "^4.3.0",
+		"regenerator-runtime": "^0.13.7",
 		"sass-loader": "^10.2.0",
 		"semantic-release": "^17.4.3",
 		"webpack": "^4.46.0",
