--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"currency-symbol-map": "^5.0.1",
 		"dom-scroll-into-view": "^2.0.1",
 		"hex-rgba": "^1.0.2",
+		"moment": "^2.29.1",
 		"react-google-font-loader": "1.0.5",
 		"react-lazy-load": "^3.1.13",
 		"react-sortable-hoc": "^2.0.0",
